# loom

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
src/loom/: __init__.py  __main__.py  bot.py  config.py  deps.py  edges.py  graph.py  knowledge_graph.py  models.py  nodes.py  persistence.py  session.py  state.py
src/loom/prompts/: system.md
src/loom/tools/: __init__.py  booking.py  calculator.py  constitution.py  documents.py  onboarding.py  search.py  wikipedia.py
tests/: conftest.py  test_edges.py  test_graph.py  test_models.py
