[project]
name = "loom"
version = "0.1.0"
description = "An advanced agentic workflow system using LangGraph and Pydantic AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.55",
    "langchain-core>=0.3.0",
    "pydantic-ai[anthropic]>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-telegram-bot>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
